--- a/client/package.json
+++ b/client/package.json
@@ -8,19 +8,26 @@
     "@mui/icons-material": "^6.4.5",
     "@mui/lab": "6.0.0-beta.29",
     "@mui/material": "^6.4.5",
+    "@tanstack/react-query": "^5.67.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "@trpc/client": "11.0.0-rc.824",
+    "@trpc/server": "11.0.0-rc.824",
+    "@trpc/tanstack-react-query": "11.0.0-rc.824",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "ace": "^1.3.0",
     "ace-builds": "^1.38.0",
     "react": "^19.0.0",
     "react-ace": "^14.0.1",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-scripts": "5.0.1",
+    "ts-pattern": "^5.6.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -47,5 +54,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^9.22.0"
   }
 }
