--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api",
+  "name": "server",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -20,13 +20,15 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@langchain/community": "^0.3.33",
+    "@langchain/community": "^0.3.34",
     "@langchain/core": "^0.3.42",
-    "@langchain/langgraph": "^0.2.51",
+    "@langchain/langgraph": "^0.2.52",
     "@langchain/ollama": "^0.2.0",
-    "@nestjs/common": "^11.0.11",
-    "@nestjs/core": "^11.0.11",
-    "@nestjs/platform-express": "^11.0.11",
+    "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^3.0.0",
+    "@nestjs/core": "^9.0.0",
+    "@nestjs/platform-express": "^9.0.0",
+    "@trpc/server": "^10.33.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
     "tmp": "^0.2.3",
@@ -36,24 +38,27 @@
     "@eslint/eslintrc": "^3.3.0",
     "@eslint/js": "^9.21.0",
     "@nestjs/cli": "^11.0.5",
-    "@nestjs/schematics": "^11.0.1",
+    "@nestjs/config": "^4.0.1",
+    "@nestjs/schematics": "^11.0.2",
     "@nestjs/testing": "^11.0.11",
     "@swc/cli": "^0.6.0",
-    "@swc/core": "^1.11.5",
+    "@swc/core": "^1.11.7",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.13.8",
+    "@types/node": "^22.13.9",
     "@types/supertest": "^6.0.2",
     "@types/tmp": "^0.2.6",
     "common": "link:@types/nest/common",
+    "config": "link:@types/nestjs/config",
     "eslint": "^9.21.0",
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-prettier": "^5.2.3",
     "globals": "^15.15.0",
     "jest": "^29.7.0",
     "ollama": "link:@types/langchain/ollama",
-    "prettier": "^3.5.2",
+    "prettier": "^3.5.3",
     "prompts": "link:@types/langchain/core/prompts",
+    "server": "link:@type/trpc/server",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.6",
@@ -61,7 +66,7 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.2",
-    "typescript-eslint": "^8.25.0"
+    "typescript-eslint": "^8.26.0"
   },
   "jest": {
     "moduleFileExtensions": [
